# RAGwatch-forensics

./: README.md  eval_runner.py  populate_demo_traces.py  ragwatch-forensics-PRD.md
ragwatch/: README.md  pyproject.toml
ragwatch/ragwatch/: storage.py  ui.py
ragwatch/ragwatch/forensics/: __init__.py  diagnose.py  feedback.py  judge.py  models.py
ragwatch/ragwatch/templates/: forensics.html  index.html
