[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragwatch-sdk"
version = "0.2.0"
authors = [
  { name="Mohammed Sohel Patwari", email="contactmohammedsohel@gmail.com" },
]
description = "Evaluation, monitoring, regression detection, and root-cause forensics for RAG pipelines."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "numpy",
    "sentence-transformers",
    "openai",
    "pydantic>=2.0",
    "flask"
]

[project.urls]
"Homepage" = "https://github.com/mohammedsohel2052-png/Model-regression-detection"

[tool.setuptools.package-data]
ragwatch = ["templates/*.html"]
